Fix team select width overflow close #338

--- a/src/components/Navigator.scss
+++ b/src/components/Navigator.scss
@@ -20,3 +20,7 @@
   height: auto;
   margin-right: 16px;
 }
+
+#navigator .MuiSelect-select {
+  width: 110px;
+}
